--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block title %}
+    About Us
+{% endblock %}
+
 {% block body %}
     <h1>About Us</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusantium ipsam sint vitae nam voluptatum exercitationem, aliquid magni nihil ipsa eveniet dignissimos at repellendus dolore, maxime eum tempore facilis quisquam!</p>
