--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block title %}
+    {{ id }}
+{% endblock %}
+
 {% block body %}
     <h1>{{ id }}</h1>
 {% endblock %}
