--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block title %}
+    Articles
+{% endblock %}
+
 {% block body %}
     <h1>Articles:</h1>
     <ul class="list-group">
