--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block title %}
+    Home Page
+{% endblock %}
+
 {% block body %}
     <div class="jumbotron text-center">
         <div class="container">
