Added login/logout pages and views, dashboard, 'is_logged_in' decorator

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,7 +18,11 @@
 <body>
     {% include 'includes/_navbar.html' %}
     <div class="container mt-5">
-        {% include 'includes/_messages.html' %}
+        <div class="row">
+            <div class="col-6 offset-md-3">
+                {% include 'includes/_messages.html' %}
+            </div>
+        </div>
         {% block body %}{% endblock %}
     </div>
 </body>
