Created 'articles' table, 'ArticleForm', modified templates related to that table, created 'add_article' view

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,5 +10,11 @@
             <h1 class="display-4">Welcome Home!</h1>
             <p class="lead">This is a homepage of the Simple Blog Flask Bootstrap</p>
         </div>
+        {% if session.logged_in == NULL %}
+            <div class="mt-5">
+                <a href="/register" class="btn btn-primary btn-lg">Register</a>
+                <a href="/login" class="btn btn-success btn-lg">Login</a>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
