--- a/app/templates/add_article.html
+++ b/app/templates/add_article.html
@@ -16,6 +16,6 @@
         <div class="form-group">
             {{ render_field(form.body, class_='form-control', id='editor') }}
         </div>
-        <p><input class="btn btn-primary" type="submit" value="Submit"></p>
+        <p><input class="btn btn-primary" type="submit" value="Create"></p>
     </form>
 {% endblock %}
