--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Articles:</h1>
+    <h1>All articles</h1>
     <ul class="list-group">
         {% for article in articles %}
             <li class="list-group-item">
-                <a href="article/{{ article.id }}">
+                <a href="/article/{{ article.id }}">
                     {{ article.title }}
                 </a>
+                <div class="float-right">Author: {{ article.author }}</div>
             </li>
         {% endfor %}
     </ul>
