--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -14,7 +14,7 @@
             <th>ID</th>
             <th>Title</th>
             <th>Author</th>
-            <th>Date</th>
+            <th>Created</th>
             <th></th>
             <th></th>
         </tr>
@@ -26,7 +26,7 @@
                 <td>{{ article.create_date }}</td>
                 <td><a href="/edit_article/{{ article.id }}" class="btn btn-info float-right">Edit</a></td>
                 <td>
-                    <form action="{{ url_for('delete_article', id=article.id) }}" method="post">
+                    <form action="{{ url_for('blog.delete_article', id=article.id) }}" method="post">
                         <input type="submit" value="Delete" class="btn btn-danger">
                     </form>
                 </td>
