--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,6 +15,11 @@
     <title>
         {% block title %}{% endblock %} | Blog
     </title>
+    <style>
+        .hyphenation { 
+            word-wrap: break-word;
+        }
+    </style>
 </head>
 <body>
     {% include 'includes/_navbar.html' %}
@@ -24,7 +29,7 @@
                 {% include 'includes/_messages.html' %}
             </div>
         </div>
-        {% block body %}{% endblock %}
+        <div class="hyphenation">{% block body %}{% endblock %}</div>
     </div>
     
     <script type="text/javascript">
