--- a/app/templates/add_article.html
+++ b/app/templates/add_article.html
@@ -9,7 +9,7 @@
 {% block body %}
     <h1>Create a new article</h1>
     {% from 'includes/_formtemplates.html' import render_field %}
-    <form class="mt-5" action="" method="post">
+    <form class="mt-5" action="{{ url_for('blog.add_article') }}" method="post">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <div class="form-group">
             {{ render_field(form.title, class_='form-control') }}
