--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-6 offset-md-3">
             <h1>Login</h1>
-            <form action="" method="POST">
+            <form action="{{ url_for('blog.login') }}" method="POST">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
                     <label>Username</label>
