--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -11,7 +11,7 @@
         <div class="col-6 offset-md-3">
             <h1>Registration</h1>
             {% from 'includes/_formtemplates.html' import render_field %}
-            <form class="mt-5" action="" method="post">
+            <form class="mt-5" action="{{ url_for('blog.register') }}" method="post">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="form-group">
                     {{ render_field(form.name, class_='form-control') }}
